--- a/dotnet-webapi-otel-appd.csproj
+++ b/dotnet-webapi-otel-appd.csproj
@@ -5,5 +5,13 @@
     <RootNamespace>dotnet_webapi_otel_appd</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="OpenTelemetry.Exporter.Console" Version="0.4.0-beta.2" />
+    <PackageReference Include="OpenTelemetry.Exporter.Jaeger" Version="0.4.0-beta.2" />
+    <PackageReference Include="OpenTelemetry.Instrumentation.AspNetCore" Version="0.4.0-beta.2" />
+    <PackageReference Include="OpenTelemetry.Instrumentation.Grpc" Version="0.4.0-beta.2" />
+    <PackageReference Include="OpenTelemetry.Instrumentation.Http" Version="0.4.0-beta.2" />
+  </ItemGroup>
+
 
 </Project>
