--- a/appsettings.json
+++ b/appsettings.json
@@ -6,5 +6,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Jaeger": {
+    "ServiceName": "dotnet-webapi-otel-appd",
+    "Host": "localhost",
+    "Port": 6831
+  }
 }
