--- a/appsettings.json
+++ b/appsettings.json
@@ -2,8 +2,10 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "System": "Information",
+      "Microsoft": "Information",
+      "Microsoft.Hosting.Lifetime": "Information",
+      "Grpc": "Information"
     }
   },
   "AllowedHosts": "*",
