--- a/dotnet-webapi-otel-appd.csproj
+++ b/dotnet-webapi-otel-appd.csproj
@@ -6,8 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="OpenTelemetry" Version="0.4.0-beta.2" />
     <PackageReference Include="OpenTelemetry.Exporter.Console" Version="0.4.0-beta.2" />
     <PackageReference Include="OpenTelemetry.Exporter.Jaeger" Version="0.4.0-beta.2" />
+    <PackageReference Include="OpenTelemetry.Extensions.Hosting" Version="0.4.0-beta.2" />
     <PackageReference Include="OpenTelemetry.Instrumentation.AspNetCore" Version="0.4.0-beta.2" />
     <PackageReference Include="OpenTelemetry.Instrumentation.Grpc" Version="0.4.0-beta.2" />
     <PackageReference Include="OpenTelemetry.Instrumentation.Http" Version="0.4.0-beta.2" />
